v0.6.2 (bugfixes) - Fix certain resolutions not working with xFormers - Fix specifying ToMe seed - Fix UI spacing (broken by SD UI v1.6.0) - Fix deprecation warnings

--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@
 #fabric_like_gallery img, #fabric_dislike_gallery img {
     object-fit: scale-down;
 }
+
+#fabric {
+    --layout-gap: 0.75rem;
+}
